WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35989
[chromium] Fix up WebMouseWheelEventBuilder to properly calculate the units
https://bugs.webkit.org/show_bug.cgi?id=35989
Summary
[chromium] Fix up WebMouseWheelEventBuilder to properly calculate the units
John Abd-El-Malek
Reported
2010-03-10 15:23:52 PST
[chromium] Fix up WebMouseWheelEventBuilder to properly calculate the units
Attachments
Patch
(1.47 KB, patch)
2010-03-10 15:25 PST
,
John Abd-El-Malek
fishd
: review+
fishd
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Abd-El-Malek
Comment 1
2010-03-10 15:25:56 PST
Created
attachment 50445
[details]
Patch
Darin Fisher (:fishd, Google)
Comment 2
2010-03-10 15:31:10 PST
Comment on
attachment 50445
[details]
Patch nit: please add a comment explaining that this 120 number comes from WheelEvent::initWheelEvent or something like that. R=me otherwise
John Abd-El-Malek
Comment 3
2010-03-25 01:49:54 PDT
Committed
r56515
: <
http://trac.webkit.org/changeset/56515
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug