2010-03-10  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Darin Fisher.

        [chromium] Fix up WebMouseWheelEventBuilder to properly calculate the units
        https://bugs.webkit.org/show_bug.cgi?id=35989

        * src/WebInputEventConversion.cpp:


Canonical link: https://commits.webkit.org/47809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56515 268f45cc-cd09-0410-ab3c-d52691b4dbfc